--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-  <title>Founders and Coders</title>
-</head>
-<body>
-<main>
-  <section class="left-frame">
-<div class="left-frame-container">
-  
-</div>
-  </section>
-  <section class="right-frame">
-
-  </section>
-</main>
-  <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet" />
+    <title>Founders and Coders</title>
+  </head>
+  <body>
+    <main>
+      <div class="canvas">
+        <section class="left-frame griditem">
+          <div class="why-me-container">
+            <h3>Why me?</h3>
+            <p>I love this</p>
+            <p>I wanna do x</p>
+            <p>Most of all my values are Y</p>
+          </div>
+        </section>
+        <section class="right-frame griditem">
+          <h1>Joel Kram</h1>
+          <div class="about-me-container">
+            <h2>About Me</h2>
+            <p>Hi... I'm Joel and I really really really want to be a software developer... etc etc</p>
+            <p>Here is some of the stuff I've tried/done!!!</p>
+            <p>more about me as a PERSON</p>
+            <ol>
+              <li>Link to something</li>
+              <li>Link to something</li>
+              <li>Link to something</li>
+              <li>Link to something</li>
+              <li>Link to something</li>
+            </ol>
+          </div>
+        </section>
+      </div>
+    </main>
+    <script src="main.js"></script>
+  </body>
 </html>
