added styling to right col

--- a/index.html
+++ b/index.html
@@ -17,25 +17,70 @@
         <section class="left-frame griditem">
           <div class="why-me-container">
             <h3>Why me?</h3>
-            <p>I love this</p>
+            <p>
+              I became interested in coding through university when I was
+              studying fine art. One of my peers made an insane work that was an
+              interactive television connected to a kinect, that melted your
+              body into pixels when you stood in front of it (using processing).
+              Since then, I've tried many times (and failed lots too) to pick up
+              the skills, however, it has never super duper stuck. Everytime I
+              try, I do learn a little bit more!
+            </p>
             <p>I wanna do x</p>
-            <p>Most of all my values are Y</p>
+            <p>
+              Most of all, I do have a massive interest in the ethics behind
+              tech. I think we have a responsiblity as practitioners to make
+              considered and ethical choices about how we are using, creating
+              and disseminating technology. The big watch word at the moment is
+              AI. I'm super concerned that the bulk of research in this area is
+              being driven by profit-driven corporations, which I do not think
+              is a net positive for the world. I want to be able to understand
+              how AI and software development works so I can better educate and
+              support my peers and community in the future.
+            </p>
           </div>
         </section>
         <section class="right-frame griditem">
-          <h1>Joel Kram</h1>
+          <div id="title">
+            <h1>Joel Kram</h1>
+          </div>
+
           <div class="about-me-container">
-            <h2>About Me</h2>
-            <p>Hi... I'm Joel and I really really really want to be a software developer... etc etc</p>
-            <p>Here is some of the stuff I've tried/done!!!</p>
-            <p>more about me as a PERSON</p>
-            <ol>
-              <li>Link to something</li>
-              <li>Link to something</li>
-              <li>Link to something</li>
-              <li>Link to something</li>
-              <li>Link to something</li>
-            </ol>
+            <div id="about">
+              <h2>About Me</h2>
+            </div>
+            <div class="paragraph">
+              <p>
+                Hi... I'm Joel and I really really really want to be a software
+                developer. While I'm still figuring out what I'm doing, I
+                definitely know what I like doing! I'm a creative person and
+                above all, I love learning!!!
+              </p>
+            </div>
+            <div class="paragraph">
+              <p>
+                I've messed around with doing LOADS of different things - like
+                making music, visuals for club gigs, short films, photography
+                and design. I love my hobbies and I seem to cycle through em- if
+                it isn't playing guitar, it's playing board games, RPG's,
+                writing stories, birdwatching, cooking, reading, dancing or just
+                watching a movie!! My obsession at the moment is to try and make
+                cool glitchy visuals with p5.js
+              </p>
+            </div>
+            <div class="paragraph">
+              <p>Here is some of the stuff I've tried/done!!!</p>
+              <p>more about me as a PERSON</p>
+            </div>
+            <div class="list">
+              <ol>
+                <li>Diamonds are forever</li>
+                <li>Monuments</li>
+                <li>Hyphira Music video stuff</li>
+                <li>Travel Pics?</li>
+                <li>Link to something</li>
+              </ol>
+            </div>
           </div>
         </section>
       </div>
