--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="right-frame griditem">
           <div id="title">
-            <h1>Joel Kram</h1>
+            <h1>JOEL KRAM</h1>
           </div>
 
           <div class="about-me-container">
