added hover effect on about me

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <div class="canvas">
         <section class="left-frame griditem">
           <div class="why-me-container">
+            <div id="h3-head">
             <h3>Why me?</h3>
+            </div>
             <p>
               I became interested in coding through university when I was
               studying fine art. One of my peers made an insane work that was an
